<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="240dp"
        android:layout_height="191dp"
        android:layout_marginStart="75dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="75dp"
        android:layout_marginBottom="30dp"
        android:adjustViewBounds="true"
        android:contentDescription="@string/imageDescription"
        android:cropToPadding="false"
        android:foregroundGravity="center_vertical|center_horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textResult"
        app:srcCompat="@drawable/bonsai" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="180dp"
        android:layout_height="62dp"
        android:layout_marginStart="147dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="141dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toTopOf="@+id/convertButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textValue">

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/radioButton1"
            android:textColor="#3F51B5"
            android:textStyle="bold" />

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/radioButton2"
            android:textColor="#3F51B5"
            android:textStyle="bold" />
    </RadioGroup>

    <TextView
        android:id="@+id/textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="60dp"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:text="@string/textTitle"
        android:textColor="#058176"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textValue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textResult"
        android:layout_width="236dp"
        android:layout_height="32dp"
        android:layout_marginStart="151dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="151dp"
        android:layout_marginBottom="10dp"
        android:text="@string/textResult"
        android:textAlignment="center"
        android:textColor="#0328F3"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/imageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/convertButton" />

    <EditText
        android:id="@+id/textValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="99dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="99dp"
        android:layout_marginBottom="10dp"
        android:digits="0123456789."
        android:ems="10"
        android:enabled="true"
        android:gravity="center_horizontal"
        android:hint="@string/textValue"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:textAlignment="center"
        android:textColor="#072CF5"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTitle" />

    <Button
        android:id="@+id/convertButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="138dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="139dp"
        android:layout_marginBottom="10dp"
        android:text="@string/convertButton"
        android:textColor="#E401796E"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/textResult"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup" />

</androidx.constraintlayout.widget.ConstraintLayout>